--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ http://www.templatemo.com/tm-467-easy-profile
 				<ul class="social-icons">
 					<li><a href="https://www.facebook.com/profile.php?id=100007074827948" class="fa fa-facebook" target="blank"></a></li>
                      			<li><a href="https://www.linkedin.com/in/md-sumon-rana/" class="fa fa-linkedin"></a></li>
-					<li><a href="https://www.instagram.com/sr__sumon/" class="fa fa-instragram"></a></li>
+					<li><a href="https://www.instagram.com/sr__sumon/" class="fa fa-instagram"></a></li>
 					<li><a href="https://www.youtube.com/channel/UCAee3c2bQASZa_LSQCGViWQ" class="fa fa-youtube"></a></li>
 					
 				</ul>
