--- a/index.html
+++ b/index.html
@@ -208,9 +208,9 @@ http://www.templatemo.com/tm-467-easy-profile
 				<p>Copyright &copy; 2020 Sumon Rana</p>
 				<ul class="social-icons">
 					<li><a href="https://www.facebook.com/profile.php?id=100007074827948" class="fa fa-facebook" target="blank"></a></li>
-                     			<li><a href="https://www.linkedin.com/in/md-sumon-rana/" class="fa fa-linkedin"></a></li>
-					<li><a href="https://www.instagram.com/sr__sumon/" class="fa fa-instagram"></a></li>
-					<li><a href="https://www.youtube.com/channel/UCAee3c2bQASZa_LSQCGViWQ" class="fa fa-youtube"></a></li>
+                     			<li><a href="https://www.linkedin.com/in/md-sumon-rana/" class="fa fa-linkedin" target="blank"></a></li>
+					<li><a href="https://www.instagram.com/sr__sumon/" class="fa fa-instagram" target="blank"></a></li>
+					<li><a href="https://www.youtube.com/channel/UCAee3c2bQASZa_LSQCGViWQ" class="fa fa-youtube" target="blank"></a></li>
 					
 				</ul>
 			</div>
