--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ http://www.templatemo.com/tm-467-easy-profile
 			<div class="col-md-12 col-sm-12">
 				<img src="images/prf.jpg" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
 				<hr>
-				<h1 class="tm-title bold shadow">Hi, I am Sumon Rana</h1>
+				<h1 class="tm-title bold shadow">Hi, I am Md. Sumon Rana</h1>
 				<h1 class="white bold shadow">"Student"</h1>
 			</div>
 		</div>
