--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@ http://www.templatemo.com/tm-467-easy-profile
 			<div class="about">
 				<h3 class="accent">Profile</h3>
 				<br>
-				<p>Myself Md. Sumon Rana, a student in the <b>Dept. of Land Management & Law</b> at <b>Jagannath University</b>  from Dhaka, Bangladesh. <br>
+				<p>Myself <b>Md. Sumon Rana</b>, a student in the <b>Dept. of Land Management & Law</b> at <b>Jagannath University</b>  from Dhaka, Bangladesh. <br>
 					
 					I am always energetic and eager to learn new skills. Because, I believe that without knowledge and skills , Nobody can success in life. As a consequence,  I want to involve
 					myself in dynamic and challenging work where I have the opportunity
 					to implement my ideas to achieve my target. <br>
+					I love to discover more, create more, become familiar with the obscure. I trust that I can contribute my best to the field of science and innovation. I need to get experienced in each field and accumulate however much I can.
 					</p>
 			</div>
 		</div>
@@ -147,6 +148,14 @@ http://www.templatemo.com/tm-467-easy-profile
 						<li>Hindi</li>
 						<li>Arabic</li>
 					</ul>
+				
+				<h2>Hobbies</h2>
+					<ul>
+						<li>Photography</li>
+						<li>Travelling</li>
+						<li>Listen to Music</li>
+						<li>Read story books</li>
+					</ul>
 			</div>
 		</div>
 	</div>
@@ -162,6 +171,9 @@ http://www.templatemo.com/tm-467-easy-profile
 					<p><i class="fa fa-phone"></i> +8801877347714</p>
 					<p><i class="fa fa-envelope"></i> sumonr7714@gmail.com</p>
 					<p><i class="fa fa-globe"></i> www.company.com</p>
+				<br>
+				<br>
+				<div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d913.1146505406007!2d90.43134208480251!3d23.731020298810925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8389cb4bd25%3A0x5cc49e3542315495!2sNorth%20Mugdapara%2C%20Dhaka!5e0!3m2!1sen!2sbd!4v1612878768488!5m2!1sen!2sbd" width="294" height="294" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
 			</div>
 		</div>
 		<div class="col-md-8 col-sm-12">
