--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ http://www.templatemo.com/tm-467-easy-profile
 					
 					I am always energetic and eager to learn new skills. Because, I believe that without knowledge and skills , Nobody can success in life. As a consequence,  I want to involve
 					myself in dynamic and challenging work where I have the opportunity
-					to implement my ideas to achieve my target. <br>
+					to implement my ideas to achieve my target. <br><br>
 					I love to discover more, create more, become familiar with the obscure. I trust that I can contribute my best to the field of science and innovation. I need to get experienced in each field and accumulate however much I can.
 					</p>
 			</div>
@@ -209,7 +209,7 @@ http://www.templatemo.com/tm-467-easy-profile
 					<p><i class="fa fa-globe"></i> www.company.com</p>
 					<br>
 					<br>
-					<div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d913.1146505406007!2d90.43134208480251!3d23.731020298810925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8389cb4bd25%3A0x5cc49e3542315495!2sNorth%20Mugdapara%2C%20Dhaka!5e0!3m2!1sen!2sbd!4v1612878768488!5m2!1sen!2sbd" width="294" height="294" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+					<div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d913.1146505406007!2d90.43134208480251!3d23.731020298810925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8389cb4bd25%3A0x5cc49e3542315495!2sNorth%20Mugdapara%2C%20Dhaka!5e0!3m2!1sen!2sbd!4v1612878768488!5m2!1sen!2sbd" width="288" height="294" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
 			</div>
 			
 		</div>
